--- a/.eslintrc
+++ b/.eslintrc
@@ -35,6 +35,7 @@
     "indent": "off",
     "comma-dangle": "off",
     "no-shadow": "off",
+    "no-underscore-dangle": "off",
 
     // import
     "import/no-named-as-default": "off",
