--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "@emotion/react": "^11.4.0",
     "@emotion/styled": "^11.3.0",
+    "lodash.padstart": "^4.6.1",
     "next": "^12.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
@@ -34,6 +35,7 @@
     "@storybook/react": "^6.3.2",
     "@testing-library/react": "^12.0.0",
     "@tsconfig/recommended": "^1.0.1",
+    "@types/lodash.padstart": "^4.6.6",
     "@types/node": "^14.14.35",
     "@types/react": "^17.0.3",
     "@types/react-dom": "^17.0.2",
