--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
   "dependencies": {
     "@emotion/react": "^11.4.0",
     "@emotion/styled": "^11.3.0",
+    "@prisma/client": "^3.9.2",
     "lodash.padstart": "^4.6.1",
     "next": "^12.0.0",
+    "prisma": "^3.9.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
