--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@emotion/react": "^11.4.0",
     "@emotion/styled": "^11.3.0",
     "@prisma/client": "^3.9.2",
+    "date-fns": "^2.28.0",
     "lodash.padstart": "^4.6.1",
     "next": "^12.0.0",
     "prisma": "^3.9.2",
