--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@emotion/styled": "^11.3.0",
     "@prisma/client": "^3.9.2",
     "date-fns": "^2.28.0",
+    "date-fns-tz": "^1.2.2",
     "lodash.padstart": "^4.6.1",
     "next": "^12.0.0",
     "prisma": "^3.9.2",
