--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "@prisma/client": "^3.9.2",
     "date-fns": "^2.28.0",
     "date-fns-tz": "^1.2.2",
+    "lodash.lowercase": "^4.3.0",
     "lodash.padstart": "^4.6.1",
+    "lodash.throttle": "^4.1.1",
     "next": "^12.0.0",
     "prisma": "^3.9.2",
     "react": "^17.0.2",
@@ -41,7 +43,9 @@
     "@storybook/react": "^6.3.2",
     "@testing-library/react": "^12.0.0",
     "@tsconfig/recommended": "^1.0.1",
+    "@types/lodash.lowercase": "^4.3.6",
     "@types/lodash.padstart": "^4.6.6",
+    "@types/lodash.throttle": "^4.1.6",
     "@types/node": "^14.14.35",
     "@types/react": "^17.0.3",
     "@types/react-dom": "^17.0.2",
