--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@prisma/client": "^3.9.2",
     "date-fns": "^2.28.0",
     "date-fns-tz": "^1.2.2",
+    "html-entities": "^2.3.2",
     "lodash.lowercase": "^4.3.0",
     "lodash.padstart": "^4.6.1",
     "lodash.throttle": "^4.1.1",
