--- a/package.json
+++ b/package.json
@@ -22,50 +22,39 @@
     "@emotion/react": "^11.4.0",
     "@emotion/styled": "^11.3.0",
     "@prisma/client": "^5.0.0",
-    "date-fns": "^2.28.0",
-    "date-fns-tz": "^1.2.2",
-    "html-entities": "^2.3.2",
+    "date-fns": "^3.3.1",
+    "date-fns-tz": "^2.0.1",
+    "html-entities": "^2.5.2",
     "lodash.lowercase": "^4.3.0",
     "lodash.padstart": "^4.6.1",
     "lodash.throttle": "^4.1.1",
-    "next": "^12.0.0",
-    "prisma": "^5.0.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "next": "^14.1.3",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.14.6",
-    "@emotion/babel-plugin": "^11.2.0",
-    "@emotion/eslint-plugin": "^11.2.0",
-    "@storybook/addon-actions": "^6.3.2",
-    "@storybook/addon-docs": "^6.3.2",
-    "@storybook/addon-essentials": "^6.3.2",
-    "@storybook/addon-links": "^6.3.2",
-    "@storybook/react": "^6.3.2",
-    "@testing-library/react": "^12.0.0",
-    "@tsconfig/recommended": "^1.0.1",
+    "@tsconfig/recommended": "^1.0.3",
     "@types/lodash.lowercase": "^4.3.6",
     "@types/lodash.padstart": "^4.6.6",
     "@types/lodash.throttle": "^4.1.6",
-    "@types/node": "^14.14.35",
-    "@types/react": "^17.0.3",
-    "@types/react-dom": "^17.0.2",
-    "@typescript-eslint/eslint-plugin": "^5.3.1",
-    "@typescript-eslint/parser": "^5.3.1",
-    "babel-loader": "^8.2.2",
-    "eslint": "^7.30.0",
-    "eslint-config-airbnb": "^18.2.1",
-    "eslint-config-next": "^11.0.1",
-    "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-jsx-a11y": "^6.4.1",
-    "eslint-plugin-simple-import-sort": "^7.0.0",
+    "@types/node": "^20.11.25",
+    "@types/react": "^18.2.64",
+    "@types/react-dom": "^18.2.21",
+    "@typescript-eslint/eslint-plugin": "^7.1.1",
+    "@typescript-eslint/parser": "^7.1.1",
+    "eslint": "^8.57.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-next": "^14.1.3",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-jsx-a11y": "^6.8.0",
+    "eslint-plugin-simple-import-sort": "^12.0.0",
     "eslint-plugin-sort-imports-es6-autofix": "^0.6.0",
-    "husky": "^7.0.0",
-    "jest": "^27.0.6",
-    "lint-staged": "^10.5.4",
-    "prettier": "^2.4.1",
-    "ts-prune": "^0.10.1",
-    "typescript": "^4.4.4"
+    "husky": "^9.0.11",
+    "knip": "^5.0.3",
+    "lint-staged": "^15.2.2",
+    "prettier": "^3.2.5",
+    "prisma": "^5.0.0",
+    "typescript": "^5.4.2"
   },
   "husky": {
     "hooks": {
