--- a/.eslintrc
+++ b/.eslintrc
@@ -3,17 +3,17 @@
   "env": {
     "browser": true,
     "node": true,
-    "es6": true
+    "es6": true,
   },
   "globals": {
-    "React": true
+    "React": true,
   },
-  "plugins": ["@emotion", "@typescript-eslint", "simple-import-sort"],
+  "plugins": ["@typescript-eslint", "simple-import-sort"],
   "extends": [
     "eslint:recommended",
     "airbnb",
     "plugin:@typescript-eslint/recommended",
-    "next"
+    "next",
   ],
   "root": true,
 
@@ -68,8 +68,8 @@
     "react/jsx-sort-props": [
       "warn",
       {
-        "callbacksLast": true
-      }
+        "callbacksLast": true,
+      },
     ],
     "react/no-deprecated": "error",
     "react/no-typos": "error",
@@ -80,21 +80,21 @@
     // Typescript
     "@typescript-eslint/explicit-module-boundary-types": "off",
     "@typescript-eslint/no-shadow": "error",
-    "@typescript-eslint/no-empty-interface": "off"
+    "@typescript-eslint/no-empty-interface": "off",
   },
   "parserOptions": {
     "ecmaFeatures": {
       "jsx": true,
-      "modules": true
-    }
+      "modules": true,
+    },
   },
 
   "settings": {
     "import/resolver": {
       "node": {
         "paths": ["src"],
-        "extensions": [".ts", ".tsx", ".d.ts"]
-      }
-    }
-  }
+        "extensions": [".ts", ".tsx", ".d.ts"],
+      },
+    },
+  },
 }
