--- a/package.json
+++ b/package.json
@@ -13,35 +13,32 @@
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook",
     "test": "jest",
-    "lint": "next lint",
+    "lint": "next lint && npx stylelint '**/*.css' && yarn knip:prune",
     "lint:prune": "! ts-prune -i src/pages/* | grep -v -e src/pages",
     "prisma:regenerate": "npx prisma generate",
-    "prisma:db-update-schema": "npx prisma db push"
+    "prisma:db-update-schema": "npx prisma db push",
+    "knip:prune": "knip --include exports,types"
   },
   "dependencies": {
-    "@emotion/react": "^11.4.0",
-    "@emotion/styled": "^11.3.0",
     "@prisma/client": "^5.0.0",
+    "@types/lodash": "^4.14.202",
+    "clsx": "^2.1.0",
     "date-fns": "^3.3.1",
     "date-fns-tz": "^2.0.1",
     "html-entities": "^2.5.2",
-    "lodash.lowercase": "^4.3.0",
-    "lodash.padstart": "^4.6.1",
-    "lodash.throttle": "^4.1.1",
+    "lodash": "^4.17.21",
     "next": "^14.1.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@tsconfig/recommended": "^1.0.3",
-    "@types/lodash.lowercase": "^4.3.6",
-    "@types/lodash.padstart": "^4.6.6",
-    "@types/lodash.throttle": "^4.1.6",
     "@types/node": "^20.11.25",
     "@types/react": "^18.2.64",
     "@types/react-dom": "^18.2.21",
     "@typescript-eslint/eslint-plugin": "^7.1.1",
     "@typescript-eslint/parser": "^7.1.1",
+    "autoprefixer": "^10.4.18",
     "eslint": "^8.57.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-next": "^14.1.3",
@@ -52,9 +49,18 @@
     "husky": "^9.0.11",
     "knip": "^5.0.3",
     "lint-staged": "^15.2.2",
+    "postcss": "^8.4.35",
     "prettier": "^3.2.5",
+    "prettier-plugin-tailwindcss": "^0.5.9",
     "prisma": "^5.0.0",
+    "stylelint": "^16.0.2",
+    "stylelint-config-standard": "^35.0.0",
+    "stylelint-order": "^6.0.4",
+    "tailwindcss": "^3.4.1",
     "typescript": "^5.4.2"
+  },
+  "resolutions": {
+    "string-width": "4.2.3"
   },
   "husky": {
     "hooks": {
@@ -67,6 +73,9 @@
     ],
     "*.{ts,tsx}": [
       "eslint --fix"
+    ],
+    "*.css": [
+      "stylelint --fix"
     ]
   }
 }
