--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,17 +6,13 @@
     "sourceMap": true,
     "noImplicitAny": true,
     "jsx": "preserve",
-    "jsxImportSource": "@emotion/react",
     "baseUrl": "./",
     "allowJs": true,
     "alwaysStrict": true,
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "isolatedModules": true,
-    "lib": [
-      "dom",
-      "es2017"
-    ],
+    "lib": ["dom", "es2017"],
     "module": "esnext",
     "noEmit": true,
     "noFallthroughCasesInSwitch": true,
@@ -27,17 +23,10 @@
     "strict": true,
     "target": "esnext",
     "paths": {
-      "~/*": [
-        "src/*"
-      ]
+      "~/*": ["src/*"]
     },
     "incremental": true
   },
-  "exclude": [
-    "node_modules"
-  ],
-  "include": [
-    "**/*.ts",
-    "**/*.tsx"
-  ]
+  "exclude": ["node_modules"],
+  "include": ["**/*.ts", "**/*.tsx"]
 }
