--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,7 +13,7 @@
   "[prisma]": {
     "editor.defaultFormatter": "Prisma.prisma"
   },
-  "cSpell.words": ["tailwindcss"],
+  "cSpell.words": ["clsx", "tailwindcss"],
   "tailwindCSS.classAttributes": [
     "class",
     "className",
