--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "lodash": "^4.17.21",
     "next": "^14.1.3",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "tailwind-merge": "^2.2.1"
   },
   "devDependencies": {
     "@tsconfig/recommended": "^1.0.3",
