--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@mdi/react": "^1.6.1",
     "@prisma/client": "^5.0.0",
     "clsx": "^2.1.0",
+    "cookie": "^0.6.0",
     "date-fns": "2.30.0",
     "date-fns-tz": "^2.0.1",
     "html-entities": "^2.5.2",
@@ -36,6 +37,7 @@
   },
   "devDependencies": {
     "@tsconfig/recommended": "^1.0.3",
+    "@types/cookie": "^0.6.0",
     "@types/lodash": "^4.14.202",
     "@types/node": "^20.11.25",
     "@types/react": "^18.2.64",
