--- a/package.json
+++ b/package.json
@@ -31,8 +31,10 @@
     "html-entities": "^2.5.2",
     "lodash": "^4.17.21",
     "next": "^14.1.3",
+    "next-superjson-plugin": "0.5.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "superjson": "^1.13.3",
     "tailwind-merge": "^2.2.1"
   },
   "devDependencies": {
