--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -18,6 +18,8 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - uses: ./.github/actions/yarn
+      - name: Regenerate the prisma client
+        run: yarn prisma:generate
       - name: Run linting
         run: yarn lint
       - name: Check Typescript
