--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -19,7 +19,7 @@ jobs:
       - uses: actions/checkout@v3
       - uses: ./.github/actions/yarn
       - name: Regenerate the prisma client
-        run: yarn prisma:generate
+        run: yarn prisma:regenerate
       - name: Run linting
         run: yarn lint
       - name: Check Typescript
