--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "@mdi/js": "^7.4.47",
     "@mdi/react": "^1.6.1",
+    "@mui/material": "^5.16.0",
     "@prisma/client": "^5.0.0",
     "clsx": "^2.1.0",
     "cookie": "^0.6.0",
