--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@mdi/react": "^1.6.1",
     "@mui/material": "^5.16.0",
     "@prisma/client": "^5.0.0",
+    "argon2": "^0.41.1",
     "clsx": "^2.1.0",
     "cookie": "^0.6.0",
     "date-fns": "2.30.0",
