--- a/package.json
+++ b/package.json
@@ -9,16 +9,17 @@
   "scripts": {
     "------- setup -------": "",
     "prepare": "husky install",
-    "setup": "chmod -R +x ./scripts/ && yarn install && yarn prepare",
+    "setup": "chmod -R +x ./scripts/ && pnpm run install && pnpm run prepare",
+    "preinstall": "npx only-allow pnpm",
     "------- builds -------": "",
     "dev": "next dev",
     "build": "prisma generate && next build",
-    "build:serve": "yarn build && yarn next start -p 3003",
+    "build:serve": "pnpm run build && pnpm run next start -p 3003",
     "------- generators -------": "",
     "generate:env-types": "./scripts/get-env-types.sh",
     "------- lint & test -------": "",
     "test": "jest",
-    "lint": "next lint && npx stylelint '**/*.css' && yarn knip:prune",
+    "lint": "next lint && npx stylelint '**/*.css' && pnpm run knip:prune",
     "lint:prune": "! ts-prune -i src/pages/* | grep -v -e src/pages",
     "knip:prune": "knip --include exports,types",
     "------- prisma -------": "",
@@ -29,7 +30,8 @@
     "@mdi/js": "^7.4.47",
     "@mdi/react": "^1.6.1",
     "@mui/material": "^5.16.0",
-    "@prisma/client": "^5.0.0",
+    "@prisma/client": "5.10.2",
+    "@tanstack/react-query": "^5.62.10",
     "argon2": "^0.41.1",
     "clsx": "^2.1.0",
     "cookie": "^0.6.0",
@@ -69,7 +71,7 @@
     "postcss": "^8.4.35",
     "prettier": "^3.2.5",
     "prettier-plugin-tailwindcss": "^0.5.9",
-    "prisma": "^5.0.0",
+    "prisma": "5.10.2",
     "stylelint": "^16.0.2",
     "stylelint-config-standard": "^35.0.0",
     "stylelint-order": "^6.0.4",
