--- a/.github/actions/pnpm/action.yml
+++ b/.github/actions/pnpm/action.yml
@@ -1,4 +1,4 @@
-name: 'Restore Yarn Cache'
+name: 'Restore pnpm Cache'
 description: 'Setup a NodeJS environment and restore cache if any, given a node version'
 
 runs:
@@ -13,8 +13,8 @@ runs:
       with:
         path: |
           **/node_modules
-        key: v1-yarn-${{ runner.os }}-${{ hashFiles('.nvmrc') }}-${{ hashFiles('**/yarn.lock') }}
+        key: v1-pnpm-${{ runner.os }}-${{ hashFiles('.nvmrc') }}-${{ hashFiles('**/pnpm-lock.yaml') }}
 
     - name: Install Dependencies If Not Cached
-      run: \[ -d node_modules \] || yarn install --frozen-lockfile
+      run: \[ -d node_modules \] || pnpm install --frozen-lockfile
       shell: bash
