using query for spotify

--- a/.eslintrc
+++ b/.eslintrc
@@ -13,6 +13,7 @@
     "eslint:recommended",
     "airbnb",
     "plugin:@typescript-eslint/recommended",
+    "plugin:@tanstack/query/recommended",
     "next",
   ],
   "root": true,
