--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "tailwind-merge": "^2.2.1"
   },
   "devDependencies": {
+    "@tanstack/eslint-plugin-query": "^5.62.9",
     "@tsconfig/recommended": "^1.0.3",
     "@types/cookie": "^0.6.0",
     "@types/jsonwebtoken": "^9.0.7",
