--- a/.github/actions/pnpm/action.yml
+++ b/.github/actions/pnpm/action.yml
@@ -16,5 +16,5 @@ runs:
         key: v1-pnpm-${{ runner.os }}-${{ hashFiles('.nvmrc') }}-${{ hashFiles('**/pnpm-lock.yaml') }}
 
     - name: Install Dependencies If Not Cached
-      run: \[ -d node_modules \] || pnpm install --frozen-lockfile
+      run: \[ -d node_modules \] || pnpm setup
       shell: bash
