--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -19,8 +19,8 @@ jobs:
       - uses: actions/checkout@v3
       - uses: ./.github/actions/pnpm
       - name: Regenerate the prisma client
-        run: yarn prisma:regenerate
+        run: pnpm run prisma:regenerate
       - name: Run linting
-        run: yarn lint
+        run: pnpm lint
       - name: Check Typescript
-        run: yarn tsc
+        run: pnpm tsc
