--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "tailwind-merge": "^2.2.1"
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4.1.13",
     "@tanstack/eslint-plugin-query": "^5.62.9",
     "@tsconfig/recommended": "^1.0.3",
     "@types/cookie": "^0.6.0",
@@ -59,7 +60,6 @@
     "@types/react-dom": "^18.2.21",
     "@typescript-eslint/eslint-plugin": "^7.1.1",
     "@typescript-eslint/parser": "^7.1.1",
-    "autoprefixer": "^10.4.18",
     "eslint": "^8.57.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-next": "^14.1.3",
@@ -72,12 +72,12 @@
     "lint-staged": "^15.2.2",
     "postcss": "^8.4.35",
     "prettier": "^3.2.5",
-    "prettier-plugin-tailwindcss": "^0.5.9",
+    "prettier-plugin-tailwindcss": "^0.6.14",
     "prisma": "5.10.2",
     "stylelint": "^16.0.2",
     "stylelint-config-standard": "^35.0.0",
     "stylelint-order": "^6.0.4",
-    "tailwindcss": "^3.4.1",
+    "tailwindcss": "^4.1.13",
     "typescript": "^5.9.2"
   },
   "resolutions": {
