--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,6 +13,7 @@
     "forceConsistentCasingInFileNames": true,
     "isolatedModules": true,
     "lib": ["dom", "ES2022"],
+    "types": ["vitest/globals"],
     "module": "ESNext",
     "noEmit": true,
     "noFallthroughCasesInSwitch": true,
@@ -42,6 +43,9 @@
     "next-env.d.ts",
     "**/*.ts",
     "**/*.tsx",
-    ".next/types/**/*.ts"
+    ".next/types/**/*.ts",
+    "tests/**/*.ts",
+    "**/*.test.ts",
+    "**/*.test.tsx"
   ]
 }
