--- a/package.json
+++ b/package.json
@@ -19,12 +19,10 @@
     "------- generators -------": "",
     "generate:env-types": "./scripts/get-env-types.sh",
     "------- lint & test -------": "",
+    "test": "jest",
     "lint": "next lint && npx stylelint '**/*.css' && pnpm run knip:prune",
     "lint:prune": "! ts-prune -i src/pages/* | grep -v -e src/pages",
     "knip:prune": "knip --include exports,types",
-    "test": "vitest",
-    "test:run": "vitest run",
-    "test:ui": "vitest --ui",
     "------- prisma -------": "",
     "prisma:regenerate": "npx prisma generate",
     "prisma:db-update-schema": "npx prisma db push"
@@ -53,8 +51,6 @@
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.13",
     "@tanstack/eslint-plugin-query": "^5.62.9",
-    "@testing-library/dom": "^10.4.1",
-    "@testing-library/react": "^16.3.0",
     "@tsconfig/recommended": "^1.0.3",
     "@types/cookie": "^0.6.0",
     "@types/jsonwebtoken": "^9.0.7",
@@ -64,7 +60,6 @@
     "@types/react-dom": "^18.2.21",
     "@typescript-eslint/eslint-plugin": "^7.1.1",
     "@typescript-eslint/parser": "^7.1.1",
-    "@vitejs/plugin-react": "^5.0.3",
     "eslint": "^8.57.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-next": "^14.1.3",
@@ -73,7 +68,6 @@
     "eslint-plugin-simple-import-sort": "^12.0.0",
     "eslint-plugin-sort-imports-es6-autofix": "^0.6.0",
     "husky": "^9.0.11",
-    "jsdom": "^27.0.0",
     "knip": "^5.0.3",
     "lint-staged": "^15.2.2",
     "postcss": "^8.4.35",
@@ -84,9 +78,7 @@
     "stylelint-config-standard": "^35.0.0",
     "stylelint-order": "^6.0.4",
     "tailwindcss": "^4.1.13",
-    "typescript": "^5.9.2",
-    "vite-tsconfig-paths": "^5.1.4",
-    "vitest": "^3.2.4"
+    "typescript": "^5.9.2"
   },
   "resolutions": {
     "string-width": "4.2.3"
